package domain

type EventPacketInclusion struct {
	PacketID int
	EventID  int
}
