CREATE TABLE IF NOT EXISTS events (
    ID SERIAL PRIMARY KEY,
    ID_OWNER INT NOT NULL,
    name VARCHAR(255) UNIQUE NOT NULL,
    location VARCHAR(255) NULL,
    description VARCHAR(255) NULL,
    seats INT NULL
);

CREATE TABLE IF NOT EXISTS event_packets (
    ID SERIAL PRIMARY KEY,
    ID_OWNER INT NOT NULL,
    name VARCHAR(255) UNIQUE NOT NULL,
    location VARCHAR(255) NULL,
    description VARCHAR(255) NULL
);

CREATE TABLE IF NOT EXISTS packet_event_relation (
    CODE VARCHAR(64) PRIMARY KEY,
    PacketID INT NOT NULL,
    EventID INT NOT NULL,
    FOREIGN KEY (PacketID) REFERENCES event_packets(ID) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (EventID) REFERENCES events(ID) ON DELETE CASCADE ON UPDATE CASCADE
);

CREATE TABLE IF NOT EXISTS packet_event_seats (
    PacketID INT NOT NULL,
    EventID INT NOT NULL,
    numberOfSeats INT NULL,
    PRIMARY KEY (PacketID, EventID),
    FOREIGN KEY (PacketID) REFERENCES event_packets(ID) ON DELETE CASCADE ON UPDATE CASCADE,
    FOREIGN KEY (EventID) REFERENCES events(ID) ON DELETE CASCADE ON UPDATE CASCADE
);