@startuml database_schema
!theme plain

skinparam class {
    BackgroundColor<<EventDB>> LightYellow
    BackgroundColor<<UserDB>> LightGreen
    BackgroundColor<<IDMDB>> LightBlue
    BackgroundColor<<Redis>> LightCoral
}

package "EventManager - PostgreSQL (event_db)" {

    class events <<EventDB>> {
        **<u>id : UUID</u>**
        --
        id_owner : UUID
        name : VARCHAR
        location : VARCHAR
        description : TEXT
        seats : INTEGER
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    class event_packets <<EventDB>> {
        **<u>id : UUID</u>**
        --
        name : VARCHAR
        price : DECIMAL
        description : TEXT
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    class event_packet_inclusions <<EventDB>> {
        **<u>id : UUID</u>**
        --
        <i>event_id : UUID (FK)</i>
        <i>event_packet_id : UUID (FK)</i>
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    class tickets <<EventDB>> {
        **<u>code : UUID</u>**
        --
        <i>event_id : UUID (FK)</i>
        <i>packet_id : UUID (FK)</i>
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    event_packet_inclusions --> events : event_id
    event_packet_inclusions --> event_packets : event_packet_id
    tickets --> events : event_id
    tickets --> event_packets : packet_id

    note right of events
        One event has:
        - Many inclusions
        - Many tickets
    end note

    note right of event_packets
        One packet has:
        - Many inclusions
        - Many tickets
    end note
}

package "User Service - MongoDB (user_db)" {

    class users <<UserDB>> {
        **<u>_id : ObjectId</u>**
        --
        id : UUID
        email : STRING
        first_name : STRING
        last_name : STRING
        first_name_private : BOOLEAN
        last_name_private : BOOLEAN
        social_media_links : ARRAY
        ticket_list : ARRAY
    }

    class "SocialMediaLink\n(Embedded)" as social <<UserDB>> {
        platform : STRING
        url : STRING
    }

    class "Ticket\n(Embedded)" as user_ticket <<UserDB>> {
        code : UUID
        event_id : UUID
        packet_id : UUID
    }

    users *-- social : contains
    users *-- user_ticket : contains

    note bottom of users
        MongoDB Collection
        Flexible schema with
        embedded documents
    end note
}

package "IDM Service - PostgreSQL (idm_db)" {

    class idm_users <<IDMDB>> {
        **<u>id : UUID</u>**
        --
        email : VARCHAR (UNIQUE)
        parola : VARCHAR (bcrypt hash)
        rol : VARCHAR (role)
        created_at : TIMESTAMP
        updated_at : TIMESTAMP
    }

    note right of idm_users
        Password stored as bcrypt hash
        Roles: owner-event, client
        serviciu_clienti for services
    end note
}

package "IDM Service - Redis (Blacklist Cache)" {

    class token_blacklist <<Redis>> {
        **<u>jti : STRING</u>**
        --
        value : STRING
        ttl : 24 hours
    }

    note right of token_blacklist
        Key-Value Store
        jti = JWT Token ID
        Auto expiration
    end note
}

@enduml
